# NewsFeed

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  IDEATION_SESSION_01.md  MERGE_SAFE_BUNDLE.md  README.md  docker-compose.yml  poll_bot.py  pyproject.toml
.github/workflows/: ci.yml  deploy.yml  scheduled_briefing.yml  security.yml  telegram_handler.yml
cloudflare-worker/: worker.js  wrangler.toml
config/: agents.json  agents.yaml  pipelines.json  pipelines.yaml  review_personas.json  review_personas.yaml  secrets.json.example
deploy/cloud-run/: Dockerfile.cloudrun  deploy.sh
deploy/staging/: README.md  docker-compose.staging.yml
docs/: CONFLICT_PREVENTION.md  FINAL_PASS_REVIEW.md  FRESH_EYES_REVIEW.md  HUMAN_REVIEW.md  INCIDENT_RESPONSE.md  REPO_RECOVERY_AND_RELEASE.md  SYSTEM_ARCHITECTURE.md  V1_EXECUTION_PLAN.md
merge_safe_snapshot/docs/: SYSTEM_ARCHITECTURE.md  V1_EXECUTION_PLAN.md
merge_safe_snapshot/tests/: test_engine.py
personas/: audience.md  engineer.md  forecaster.md  source_critic.md
scripts/: setup_d1.sh  setup_webhook.sh
src/newsfeed/: __init__.py  logging_config.py  run_command.py  run_scheduled.py
src/newsfeed/agents/: __init__.py  _xml_safe.py  aljazeera.py  arxiv.py  base.py  bbc.py  cnbc.py  dynamic_sources.py  experts.py  france24.py  gdelt.py  guardian.py  hackernews.py  nature_rss.py  newsapi.py  npr.py  reddit.py  registry.py  rss_generic.py  simulated.py  techcrunch.py  websearch.py  xtwitter.py
src/newsfeed/db/: analytics.py  d1_client.py  migrations.py  state_store.py
src/newsfeed/delivery/: __init__.py  bot.py  email_digest.py  formatter.py  market.py  onboarding.py  telegram.py  webhook.py
src/newsfeed/intelligence/: clustering.py  credibility.py  enrichment.py  entities.py  georisk.py  narrative.py  source_tiers.py  trends.py  urgency.py
src/newsfeed/memory/: __init__.py  commands.py  store.py
tests/: test_agents.py  test_commands.py  test_config.py  test_data_integrity.py  test_delivery.py  test_engine.py  test_formatter.py  test_hardening.py  test_integration.py  test_intelligence.py  test_lifecycle.py  test_memory.py  test_narrative.py  test_operational.py  test_round10_final.py  test_round11_polish.py  test_round12_final_pass.py  test_round13_audit_fixes.py  test_round8_fixes.py  test_round9_robustness.py  test_ux_polish.py
tools/: bootstrap_github_remote.sh  check_merge_readiness.sh  git_health_check.sh  open_clean_pr_branch.sh  repair_pr_branch.sh  sync_main_and_validate.sh
(+27 files in other folders)
