[project]
name = "newsfeed"
version = "0.1.0"
description = "Agentic Telegram news intelligence system"
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
