[project]
name = "newsfeed"
version = "0.1.0"
description = "Agentic Telegram news intelligence system"
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[project.optional-dependencies]
llm = ["anthropic>=0.7.0"]
telegram = ["python-telegram-bot>=20.0"]
test = ["pytest>=7.0"]
dev = ["pytest>=7.0", "ruff>=0.1.0"]
all = ["anthropic>=0.7.0", "python-telegram-bot>=20.0"]

[project.scripts]
newsfeed = "newsfeed.orchestration.bootstrap:main"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
