[project]
name = "newsfeed"
version = "0.1.0"
description = "Agentic Telegram news intelligence system"
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[project.optional-dependencies]
llm = ["anthropic>=0.7.0"]
telegram = ["python-telegram-bot>=20.0"]
test = ["pytest>=7.0"]
dev = ["pytest>=7.0", "ruff>=0.4.0", "mypy>=1.8.0", "pre-commit>=3.5.0"]
all = ["anthropic>=0.7.0", "python-telegram-bot>=20.0"]

[project.scripts]
newsfeed = "newsfeed.orchestration.bootstrap:main"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
target-version = "py310"
line-length = 120
src = ["src"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "UP",  # pyupgrade
    "S",   # flake8-bandit (security)
]
ignore = [
    "E501",  # line too long (handled by formatter)
    "S101",  # use of assert (fine in tests)
    "S311",  # random (not used for crypto)
    "B008",  # function call in default arg
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S101", "S106"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
check_untyped_defs = true
